--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,11 +1,12 @@
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar sticky-top navbar-expand-lg navbar-light">
   <div class="container-fluid">
-    <a class="navbar-brand p-0" href="{{ '/' | relative_url }}">
-    {% if site.lightavatar or site.darkavatar %}
-    <img src="{{ site.lightavatar | relative_url }}" alt="light avatar" width="75" class="d-inline-block align-top m-0 light-avatar">
-    <img src="{{ site.darkavatar | relative_url }}" alt="dark avatar" width="75" class="d-inline-block align-top m-0 dark-avatar">
+        <a class="navbar-brand p-0" href="{{ '/' | relative_url }}">
+        {% if site.lightavatar or site.darkavatar %}
+        <img src="{{ site.lightavatar | relative_url }}" alt="light avatar" class="d-inline-block align-top m-0 light-avatar">
+        <img src="{{ site.darkavatar | relative_url }}" alt="dark avatar" class="d-inline-block align-top m-0 dark-avatar">
+    </a>
     {% endif %}
-      <div class="titlefont">{{ site.name }}</div></a>
+    <!-- <div class="titlefont">{{ site.name }}</div></a> -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
