--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="{{ '/assets/css/styles.css' | relative_url }}"
     />
-    <link rel="icon" href="{{ '/assets/images/favicon.ico' | relative_url }}" />
+    <link rel="icon" href="{{ '/assets/images/ccLogo-grey.png' | relative_url }}" />
     <!-- Meta Theme Color is also supported on Safari and Chrome -->
     <meta
       name="theme-color"
