--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
   <body class="d-flex flex-column h-100">
     <div class="container">
       {% include navigation.html %}
-      <div class="body">{{ content }}</div>
+      <div class="body content">{{ content }}</div>
     </div>
     {% include footer.html %}
     <!-- JS for Bootstrap -->
