--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -14,6 +14,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Jua", "Comic Sans MS", sans-serif;
+  text-align: left;
 }
 
 a {
@@ -54,6 +55,11 @@ a:hover {
 
 .shadow {
   filter: drop-shadow(0px 0px 10px #1e1e1e);
+}
+
+.wordbreak {
+	overflow-wrap: break-word;
+	text-align: left;
 }
 
 .break {
