--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -13,5 +13,6 @@ layout: default
       >{{ post.title }}</a
     >
   </div>
+  <div class="archive-subtitle">{{ post.subtitle | truncatewords: 30 }}</div>
   {% endfor %}
 </div>
