--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer class="footer mt-auto py-3">
-  <div class="container footer-container">{% include svg_icons.html %}<br>from Sage with 🩷</div>
+  <div class="container footer-container">{% include svg_icons.html %}<br>from Sage with <img src="{{site.baseurl}}/assets/images/emoji/pinkHeart.png" height="16" width="16"></div>
 </footer>
