--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,7 +5,7 @@ table {
 
 blockquote {
   @extend .blockquote;
-  border-left: 10px solid #ffbcd9;
+  border-left: 5px solid #ffbcd9;
   font-style: italic;
   text-align: left;
   margin: 1.5em 10px;
@@ -40,11 +40,12 @@ a:hover {
 
 ::selection {
   background: #ffbcd9;
+  color: #5d3737;
 }
 
 .post {
     font-family: "Literata", "Georgia", serif;
-    font-size: 1.3em;
+    font-size: 1.2em;
     text-align: justify;
     margin: auto;
     max-width: 750px;
@@ -60,6 +61,17 @@ a:hover {
   max-height: 550px;
 }
 
+.post .fullwidth img {
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  max-height: 100%;
+  max-width: 100vw;
+  width: 100vw;
+}
+
 .post iframe {
   display: block;
   margin: auto;
@@ -71,6 +83,11 @@ a:hover {
 
 .post-date {
 	@extend .text-muted;
+}
+
+.post-meta {
+  @extend .text-muted;
+  font-size: 1rem;
 }
 
 .contentWarning, .spoilerWarning, .infoWarning, .sidebar {
@@ -176,6 +193,38 @@ a:hover {
   filter: drop-shadow(0px 0px 5px #ffbcd9);
 }
 
+.hero {
+  display: flex;
+  width: 80%;
+  margin: auto;
+  align-items: center;
+  gap: 20px;
+}
+
+.hero-title {
+  font-family: "Jua", "Comic Sans MS", sans-serif;
+  font-size: 2vw;
+}
+
+.hero-subtitle {
+  @extend .text-muted;
+  font-family: "Jua", "Comic Sans MS", sans-serif;
+  font-size: 1vw;
+}
+
+.hero img {
+  height: 100%;
+  width: 100%;
+  max-height: 350px;
+  max-width: 350px;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+}
+
+.hero img:hover {
+  opacity: 0.8;
+  transition: opacity 0.3s ease;
+}
+
 .archive-year {
   margin-top: 2rem;
   margin-bottom: 1rem;
@@ -184,10 +233,22 @@ a:hover {
 .archive-date {
   float: right;
   margin-left: 1rem;
+  font-family: "Literata", "Georgia", serif;
 }
 
 .archive-item {
   margin-bottom: 0.5rem;
+}
+
+.archive-subtitle {
+  position: relative;
+  top: -0.5rem;
+  margin-left: 1rem;
+  margin-bottom: 0.5rem;
+  font-family: "Literata", "Georgia", serif;
+  @extend .text-muted;
+  font-size: 0.9rem;
+  max-width: 75%;
 }
 
 .footer-container {
