--- a/_layouts/post-poetry.html
+++ b/_layouts/post-poetry.html
@@ -17,5 +17,5 @@ layout: default
   🏷️ #{{ page.tags | sort | join: " #" }}
   {% endif %}
   </div>
-  <div class="mt-4 wordbreak">{{ content }}</div>
+  <div class="mt-4 poetry">{{ content }}</div>
 </div>
