--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -13,6 +13,6 @@ layout: default
       >{{ post.title }}</a
     >
   </div>
-  <div class="archive-subtitle">{{ post.subtitle | truncatewords: 30 }}</div>
+  <div class="archive-subtitle truncate-lines-fadeout">{{ post.subtitle }}</div>
   {% endfor %}
 </div>
