--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,12 +45,12 @@
     <!-- Meta Theme Color is also supported on Safari and Chrome -->
     <meta
       name="theme-color"
-      content="#eeeeee"
+      content="#1e1e1e"
       media="(prefers-color-scheme: dark)"
     />
     <meta
       name="theme-color"
-      content="#111111"
+      content="#ffecec"
       media="(prefers-color-scheme: light)"
     />
     {% seo %} {% feed_meta %} {%- if jekyll.environment == 'production' and
