--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -10,7 +10,7 @@ layout: default
       >{{ post.date | date: "%m.%d" }}</span
     >
     <a href="{{ post.url | relative_url }}" class="archive-title fs-4"
-      >{{ post.title }}</a
+      >{% if post.tags contains "featured" %}⭐{% endif %} {{ post.title }}</a
     >
   </div>
   <div class="archive-subtitle truncate-lines-fadeout">{{ post.subtitle }}</div>
