--- a/assets/css/cosmos.scss
+++ b/assets/css/cosmos.scss
@@ -155,6 +155,6 @@
 @media (prefers-color-scheme: dark) {
 	#letter {
 		color: #e1e1e1;
-		text-shadow: none;
+		text-shadow: 1px 1px 60px #1e1e1e;
 	}
 }
