--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -48,6 +48,43 @@ a:hover {
   text-shadow: none;
 }
 
+.fadeIn {
+  animation-duration: 1s;
+  animation-name: animate-fade;
+  animation-delay: 0.5s;
+  animation-fill-mode: backwards;
+}
+
+@keyframes animate-fade {
+  0% { 
+    opacity: 0; 
+    transform: translate3d(-50px, 0, 0);
+    }
+  100% { 
+    opacity: 1; 
+    transform: translate3d(0, 0, 0);
+    }
+}
+
+.taglinesField {
+    background-color: pink;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    max-height: 100%;
+    max-width: 100vw;
+    width: 100vw;
+}
+
+.taglines {
+    font-family: "Playpen Sans", sans-serif;
+    font-weight: bold;
+    font-size: 2em;
+    margin-left: 15%;
+}
+
 .alert {
   font-size: 0.75em;
 }
