--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
       {% if page.title %}{{ page.title }} | {% endif %}{{ site.name }}
     </title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jua|Playpen+Sans">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jua|Playpen+Sans|Zain">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- The page supports both dark and light color schemes, and the page author prefers / default is light. -->
     <meta name="color-scheme" content="dark light" />
