--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,6 +3,10 @@
   @extend .table-striped;
 }
 
+html { /* navbar scrolling compensation */
+    scroll-padding-top: 5em;
+}
+
 blockquote {
   @extend .blockquote;
   border-left: 5px solid #ffbcd9;
@@ -66,23 +70,23 @@ a:hover {
     }
 }
 
-.taglinesField {
-    background-color: pink;
-    position: relative;
-    left: 50%;
-    right: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
-    max-height: 100%;
-    max-width: 100vw;
-    width: 100vw;
-}
-
 .taglines {
-    font-family: "Playpen Sans", sans-serif;
+    font-family: "Zain", sans-serif;
     font-weight: bold;
     font-size: 2em;
+    line-height: 95%;
+    max-width: 70%;
     margin-left: 15%;
+    margin-bottom: 25px;
+    text-shadow: 1px 1px 5px #ffffff;
+}
+
+.taglinesSource {
+    font-family: "Georgia", serif;
+    @extend .text-muted;
+    font-weight: normal;
+    font-style: italic;
+    font-size: 1rem;
 }
 
 .alert {
@@ -113,6 +117,7 @@ a:hover {
   margin-bottom: 30px;
   max-width: 100%;
   max-height: 550px;
+  border-radius: 5px;
 }
 
 .post .fullwidth img {
@@ -125,6 +130,7 @@ a:hover {
   max-width: 100vw;
   width: 100vw;
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.15);
+  border-radius: 0px;
 }
 
 .post iframe {
@@ -247,11 +253,18 @@ a:hover {
   max-height: 350px;
   max-width: 750px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+  transition: all 0.5s ease;
+  border-radius: 5px;
 }
 
+/* .hero img:hover {
+filter: brightness(150%);
+  transition: all 0.3s ease;
+} */
+
 .hero img:hover {
-  opacity: 0.8;
-  transition: opacity 0.3s ease;
+  transform: scale(1.05);
+  box-shadow: 0 0 20px #ffbcd9;
 }
 
 .archive {
@@ -391,6 +404,10 @@ pre.highlight {
     text-decoration: none;
     color: #e1e1e1;
   } */
+  
+  .taglines {
+      text-shadow: 1px 1px 5px #000000;
+  }
   
   .post {
 	background-color: #1e1e1e;
