--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -74,6 +74,7 @@ a:hover {
     font-family: "Zain", sans-serif;
     font-weight: bold;
     font-size: 2em;
+    overflow-wrap: break-word;
     line-height: 95%;
     max-width: 70%;
     margin-left: 15%;
@@ -248,19 +249,14 @@ a:hover {
 }
 
 .hero img {
-  height: 100%;
-  width: 100%;
+  /* height: 100%;
+  width: 100%; */
   max-height: 350px;
   max-width: 750px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
   transition: all 0.5s ease;
   border-radius: 5px;
 }
-
-/* .hero img:hover {
-filter: brightness(150%);
-  transition: all 0.3s ease;
-} */
 
 .hero img:hover {
   transform: scale(1.05);
