--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,24 @@
       {% if page.title %}{{ page.title }} | {% endif %}{{ site.name }}
     </title>
     <meta charset="utf-8" />
+    
+    <!-- Facebook sharing parameters -->
+    <meta property="og:title"              content="{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}" />
+    <meta property="og:description"        content="{% if page.subtitle %}{{ page.subtitle }}{% else %}{{site.description }}{% endif %}" />
+    <meta property="og:image"              content="{% if page.heroImage %}{{ page.heroImage }}{% else %}{{ '/assets/images/ccLogo-catWord.png' | absolute_url }}{% endif %}" />
+    <meta property="og:site_name"          content="{{ site.name }}" />
+    <meta property="og:url"                content="{{ page.url | absolute_url }}" />
+    <meta property="og:type"               content="{% if page.layout == 'post' %}article{% else %}website{% endif %}" />
+    
+    <!-- Twitter sharing parameters -->
+    <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}">
+    <meta name="twitter:description" content="{% if page.subtitle %}{{ page.subtitle }}{% else %}{{site.description }}{% endif %}">
+    <meta name="twitter:image" content="{% if page.heroImage %}{{ page.heroImage }}{% else %}{{ '/assets/images/ccLogo-catWord.png' | absolute_url }}{% endif %}">
+    <meta name="twitter:card" content="summary_large_image">
+    
+    <!-- Google fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jua|Playpen+Sans|Zain">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- The page supports both dark and light color schemes, and the page author prefers / default is light. -->
     <meta name="color-scheme" content="dark light" />
@@ -15,7 +32,8 @@
       href="{{ '/assets/css/styles.css' | relative_url }}"
     />
     <link rel="icon" href="{{ '/assets/images/ccLogo-grey.png' | relative_url }}" />
-	    <!-- This retrieves the latest Twemoji script -->
+	
+	<!-- This retrieves the latest Twemoji script -->
     <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
 	<!-- Twemoji loader courtesy of https://gist.github.com/danielsebesta/24a28fdaa30834f856d512b813006553 -->
 	<script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js" crossorigin="anonymous"></script>
@@ -24,9 +42,7 @@
              twemoji.parse(document.body, 
                      {folder: 'svg', ext: '.svg'}
              );
-         
          }
-         
       </script>
       <style>
          img.emoji {
@@ -42,6 +58,7 @@
          pointer-events: none
          }
       </style>
+
     <!-- Meta Theme Color is also supported on Safari and Chrome -->
     <meta
       name="theme-color"
@@ -53,10 +70,12 @@
       content="#ffecec"
       media="(prefers-color-scheme: light)"
     />
-    {% seo %} {% feed_meta %} {%- if jekyll.environment == 'production' and
+    
+    {% feed_meta %} {%- if jekyll.environment == 'production' and
     site.google_analytics -%} {%- include google-analytics.html -%} {%- endif
     -%}
   </head>
+  
   <body class="d-flex flex-column h-100">
     <div class="container">
       {% include navigation.html %}
