added trans resources, taglines

--- a/_layouts/tagpage-trans.html
+++ b/_layouts/tagpage-trans.html
@@ -4,7 +4,7 @@ layout: default
 
 <h1>{{ page.tag }}</h1>
 <div class="archive">
-  <div class="archive-item archive-title fs-4"><a href="{{site.baseurl}}/trans-resources" style="text-decoration: none">📌 Trans resources</a></div>
+  <div class="archive-item archive-title fs-4"><a href="{{site.baseurl}}/trans-resources" style="text-decoration: none">📌 [WIP] Trans resources and media</a></div><br>
   {% for post in site.tags[page.tag] %} {% assign currDate = post.date | date: "%Y" %}
   <div class="archive-item">
     <span class="post-date archive-date fs-4"
